--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
     "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
