--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,13 @@
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1",
+    "mongoose": "^8.16.2",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.5",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
     "stripe": "^18.2.1"
