--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,25 @@
 {
-    "rewrites": [
+    "headers": [
         {
             "source": "/(.*)",
-            "destination": "/"
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Credentials",
+                    "value": "true"
+                },
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "https://hitman-grocery-backend.onrender.com"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET,POST,PUT,DELETE,OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "Content-Type, Authorization"
+                }
+            ]
         }
     ]
 }
